--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "magento2-module",
     "authors": [
         {
-            "name": "Exequiel Lares",
+            "name": "Exequiel Lares"
         }
     ],
     "license": [
