--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     "config": {
         "sort-packages": true
     },
-    "version": "1.0.0",
+    "version": "1.1.0",
     "require": {
         "php": "~7.4.0||~8.1.0",
-        "magento/framework": "103.0.*"
+        "magento/framework": "103.0.*",
+        "ext-json": "*"
     },
     "autoload": {
         "files": [
